--- a/.github/workflows/opencode-merge.yml
+++ b/.github/workflows/opencode-merge.yml
@@ -25,7 +25,7 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: Checkout feature branch
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.branch }}
           token: ${{ steps.app-token.outputs.token }}
@@ -166,7 +166,7 @@ jobs:
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
       - name: Checkout feature branch
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.branch }}
           token: ${{ steps.app-token.outputs.token }}
@@ -201,6 +201,7 @@ jobs:
       - name: Resolve conflicts with Sisyphus
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           FEATURE_BRANCH: ${{ github.event.client_payload.branch }}
           TASK_IDS: ${{ toJson(github.event.client_payload.task_ids) }}
         run: |
@@ -217,9 +218,9 @@ jobs:
                 
                 CONFLICTED=$(git diff --name-only --diff-filter=U)
                 
-                bun run .github/scripts/opencode-run.ts \
+                opencode run \
                   --model "opencode/big-pickle" \
-                  --prompt "Resolve merge conflicts in the following files:
+                  "Resolve merge conflicts in the following files:
 
           $CONFLICTED
 
@@ -230,7 +231,7 @@ jobs:
           4. Remove all conflict markers
           5. The code must compile and work correctly
 
-          After resolving, stage the files with 'git add'." || true
+          After resolving, stage the files with 'git add'."
                 
                 git checkout --theirs . 2>/dev/null || true
                 git add -A
