--- a/.github/workflows/opencode-workers.yml
+++ b/.github/workflows/opencode-workers.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Sync beads state
         run: |
-          bd sync --no-pull || true
+          bd sync --no-pull
 
       - name: Get ready tasks
         id: ready
@@ -107,7 +107,7 @@ jobs:
 
       - name: Sync beads state
         run: |
-          bd sync --no-pull || true
+          bd sync --no-pull
 
       - name: Create task sub-branch
         id: branch
@@ -190,7 +190,7 @@ jobs:
 
       - name: Sync beads state
         run: |
-          bd sync --no-pull || true
+          bd sync --no-pull
 
       - name: Check for more ready tasks
         id: check
