beads-*-linux-x64.tar.gz

--- a/.github/workflows/opencode-workers.yml
+++ b/.github/workflows/opencode-workers.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Sync beads state
         run: |
-          bd sync
+          bd sync --no-push
 
       - name: Get ready tasks
         id: ready
