--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
 
 # Use bd merge for beads JSONL files
-.beads/issues.jsonl merge=beads
+
+# Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
