--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,6 @@
 # Use bd merge for beads JSONL files
 
 # Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
+.beads/issues.jsonl merge=beads
